2016-07-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* SDCC.props: added ExecutablePath
	* src/ds390/gen.c,
	* src/SDCCutil.c,
	* src/SDCCval.c,
	* src/stm8/gen.c,
	* src/stm8/main.c,
	* src/z80/peep.c: fixed warnings

2016-07-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Enable an optimization that was blocked on bug #2450.
	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp:
	  Fix bug #2467 (fix previously was blocked on bug #2450).
	* src/z80/peeph-tlcs90.def:
	  Remove leftover z80 peepholes that break on tlcs90.

2016-07-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (processBlockVars): fix bug #2450
	* support/regression/tests/inline.c: add test for bug #2450
	* src/hc08/gen.c (aopForSym): remove work-around

2016-07-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2529.c
	  Regression test for bug #2517.

2016-07-29 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/cmd.src/cmd_exec.cc
	* sim/ucsim/cmd.src/cmd_get.cc
	* sim/ucsim/cmd.src/command.cc
	* sim/ucsim/fuio.cc
	* sim/ucsim/s51.src/interrupt.cc
	* sim/ucsim/s51.src/uc51.cc
	* sim/ucsim/sim.src/mem.cc
	* sim/ucsim/stm8.src/itc.cc
	* sim/ucsim/utils.h
	  Fix build failures on cygwin.
	* src/SDCCicode.c
	* src/SDCCicode.h
	  Fix bug #2517.

2016-07-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/fwio.cc: added _WIN32_WINNT def for GetConsoleWindow()
	* sim/ucsim/fio.cc: handle case S_IRGRP and S_IROTH not defined
	* sim/ucsim/doc/Makefile.in: copy *.svg files instead of *.gif

2016-07-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fixed bug #2529

2016-07-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/expf.c: ensure exponent not random before normalization

2016-07-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2385.c:
	  Disable a test for tlcs90, so all tests compile for tlcs90.
