@@ -1,3 +1,8 @@
+2016-07-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* sim/ucsim/fwio.cc: try defining WINVER instead of _WIN32_WINNT
+	* sim/ucsim/main_in.mk: omit -D option to ar, not supported by all ar
+
 2016-07-29 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* SDCC.props: added ExecutablePath
